# autogradescoper

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml
assets/: autogradescoper_utils.R
autogradescoper/: cli.py
autogradescoper/scripts/: eval_r_func_args.py  eval_r_func_problem.py  eval_r_func_probset.py
autogradescoper/utils/: utils  utils (1).py  utils (3).py  utils.py
development/: index.html
docs/: development.md  index.md  quickstart.md
docs/full/: args.md  config.md  debug.md  install.md  intro.md  preload.md  run.md  setup.md  solution.md  test.md
docs/use_cases/: example_assignment.md  new_assignment.md
examples/mypexp/: run_autograder
examples/mypexp/args/: test.1.args  test.10.args  test.2.args  test.3.args  test.4.args  test.5.args  test.6.args  test.7.args  test.8.args  test.9.args
examples/mypexp/config/: config.prob.yaml  config.yaml  preload.baseonly.R
examples/mypexp/example_answers/: README
examples/mypexp/solution/: mypexp.R
examples/predictlm/: run_autograder
examples/predictlm/args/: test.1.X.rds  test.1.y.rds  test.2.X.rds  (+7 more)
examples/testlm/: setup.sh
full/args/: index.html
full/config/: index.html
full/debug/: index.html
full/install/: index.html
full/intro/: index.html
full/preload/: index.html
full/run/: index.html
full/setup/: index.html
full/solution/: index.html
full/test/: index.html
quickstart/: index.html
search/: search_index.json
use_cases/example_assignment/: index.html
use_cases/new_assignment/: index.html
(+26 files in other folders)
